# cbr-custom--file-data

./: README.md  pyproject.toml  start-local-server.sh
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
cbr_custom_file_data/fast_api/: File_Data__Fast_API.py
cbr_custom_file_data/fast_api/routes/: Routes__Info.py
cbr_custom_file_data/lambdas/: handler.py
cbr_custom_file_data/utils/: Version.py
deploy/docker/cbr_custom/: Dockerfile  docker-compose.yml  start.sh
deploy/lambdas/: Deploy_Lambda__Cbr_Custom.py  test_Deploy_Lambda__Cbr_Custom.py
tests/integration/: file_data__objs_for_tests.py
tests/integration/fast_api/routes/: test__client__Routes__Info.py  test__http__Routes__Info.py  test__int__Routes__Info.py
tests/integration/lambda/: test__int__handler.py
tests/qa/fast_api/routes/: test__qa__Routes__Info.py
tests/unit/fast_api/: test_File_Data__Fast_API.py
tests/unit/fast_api/routes/: test_Routes__Info.py
tests/unit/utils/: test_Version.py
