[tool.poetry]
name        = "cbr_custom_file_data"
version     = "v0.1.0"
description = "CBR Custom - File Data"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-custom--file-data"
repository  = "https://github.com/the-cyber-boardroom/cbr-custom--file-data"

[tool.poetry.dependencies]
python          = "^3.11"
osbot-utils     = "*"
osbot-aws       = "*"
osbot-fast-api  = "*"
mangum          = "*"
httpx           = "*"
uvicorn         = "*"
bs4             = "*"

[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
